width appears solved: header was becoming narrower than main on smaller viewports E.G. mobile; set html width to fit-content and header width to inherit; commiting, pushing, deploying to test on mobile

--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@
 
 html {
     font-size: 10px;
-    min-width: 500px;
-    max-width: 1000px;
+    width: fit-content;
     justify-content: center;
     margin: 0 auto;
 }
@@ -67,7 +66,6 @@ body {
 main {
     display: flex;
     flex: auto;
-    /* flex-wrap: wrap; */
     line-height: 1.25em;
 }
 
